Bug 1692707 - Add sampled scroll offsets field in APZTestData to evaluate scroll _smoothness_ in mochitests. r=botond,emilio

Differential Revision: https://phabricator.services.mozilla.com/D128827